--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> 
-  <head> 
-    <title>Scalexis Inc</title> 
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
-    <style type="text/css"> 
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  <head>
+    <title>Scalexis Inc</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <style type="text/css">
       body { text-align: center; font-size: 40px; color: #ddd; font-family: Georgia; line-height: 1.5em;  margin: 0px; }
       a { color: #ccc; }
       a:hover { color: #666666; text-decoration: none; }
@@ -15,19 +15,22 @@
       .projects { color: #7F7F7F; }
       .email { color: #7F7F7F; font-weight: bold; }
       .tel { color: #AEAEAE; }
-    </style> 
-  </head> 
-  <body> 
-    <div id="container" class="vcard"> 
-      This is a home page of <span class="fn">Scalexis Inc</span><br/> 
-      Toronto-based web sites scalability and performance consulting company.<br />
+    </style>
+  </head>
+  <body>
+    <div id="container" class="vcard">
+      This is a home page of <span class="fn">Scalexis Inc</span><br/>
+      Waterloo-based web sites scalability and performance consulting company.<br />
       <br/>
       Our Founders:<br/>
-      <a href="http://kovyrin.net/" class="url">Oleksiy Kovyrin</a> / <a href="http://kovyrina.info/" class="url">Tetyana Kovyrina</a>.<br/>
+      <ul>
+        <a href="https://kovyrin.net/" class="url">Oleksiy Kovyrin</a><br/>
+        <a href="https://www.kovyrina.photo" class="url">Tetyana Kovyrina: Waterloo Photographer</a><br/>
+      </ul>
       <br/>
       Our contacts:<br/>
         <span class="tel">phone: +1 (416) 818-2454</span><br/>
         <span class="email">email: <a href="mailto:info@scalexis.com" class="email">info@scalexis.com</a></span><br/>
-    </div> 
-  </body> 
+    </div>
+  </body>
 </html>
